--- a/HomePage.html
+++ b/HomePage.html
@@ -11,9 +11,10 @@
 <div id="circle_right">
   <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/kiwifruit-on-a-plate.jpg" alt="A photograph of sliced kiwifruit on a while plate" class="curve">
 
-  <h3>HTML</h3>
-  <h3>CSS</h3>
-  <h3>JAVASCRIPT</h3>
+  <h3> <a href= "HTML.html">HTML</a></h3>
+  <h3> <a href= "CSS.html">CSS</a></h3>
+  <h3> <a href= "JAVASCRIPT.html">JAVASCRIPT</a></h3>
+  <h3>XML</h3>
   <h3>XML</h3>
 
   <br>
